# tiny_law_agent

./: .env.example  pyproject.toml  requirements.txt  start.sh  test.ipynb
agent.egg-info/: PKG-INFO  SOURCES.txt
src/agent/: configuration.py  graph.py  graph_component.py  prompt.py  state.py
src/util/: qdrant_handler.py
